classDiagram
    %% Replace the placeholders below with your actual classes, attributes, methods, and relationships.
    %% Keep this file updated so it matches your final implementation.

    class Owner {
        +String name
        +List~Pet~ pets
        +add_pet(Pet pet)
    }

    class Pet {
        +String name
        +String species
        +List~Task~ tasks
        +add_task(Task task)
    }

    class Task {
        +String title
        +int duration_minutes
        +String priority
    }

    class Scheduler {
        +int available_time_minutes
        +generate_daily_plan(Owner owner) List~Task~
    }

    Owner "1" *-- "many" Pet : owns
    Pet "1" *-- "many" Task : has
    Scheduler ..> Owner : schedules for
